# ARW

./: .actionlint.yaml  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .lychee.toml  .mise.toml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASE_NOTES_v0.1.4.md  SECURITY.md  cargo-audit.toml  cleanup_wsl.sh  deny.toml  docker-compose.yml  flake.nix  index.html  mkdocs.yml  nextest.toml  server.out
apps/arw-cli/: Cargo.toml
apps/arw-cli/src/: logic_units.rs  main.rs  recipes.rs  research_watcher.rs
apps/arw-cli/src/commands/: adapters.rs  admin.rs  capsule.rs  context.rs  events.rs  gate.rs  http.rs  mod.rs  orchestrator.rs  paths.rs  runtime.rs  screenshots.rs  smoke.rs  state.rs  status.rs  tools.rs  util.rs
apps/arw-cli/tests/: adapters_init.rs  logic_units_examples.rs  recipes_examples.rs  triad_smoke_script.rs
apps/arw-connector/: Cargo.toml
apps/arw-connector/src/: main.rs
apps/arw-launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/arw-launcher/src-tauri/capabilities/: main.json
apps/arw-launcher/src-tauri/permissions/: arw.json
apps/arw-launcher/src-tauri/src/: main.rs
apps/arw-launcher/src-tauri/ui/: README.md  capsule_presets.js  chat.css  chat.html  chat.js  common.css  common.js  connections.css  connections.html  connections.js  events.css  events.html  events.js  hub.css  hub.html  hub.js  index.css  index.html  index.js  logs.css  logs.html  logs.js  mascot.css  mascot.html  mascot.js  models.css  models.html  models.js  models_catalog.json  persona_preview.test.js  read_store.test.js  settings.css  settings.html  settings.js  sidecar.js  tokens.css  training.css  training.html  training.js  trial.css  (+3 more)
apps/arw-mini-dashboard/: Cargo.toml
apps/arw-mini-dashboard/src/: main.rs
apps/arw-server/: Cargo.toml  Dockerfile  build.rs
apps/arw-server/assets/: agents.html  debug.html  flows.html  models.html  projects.html
apps/arw-server/assets/ui/: agents.js  debug-core.js  debug.css  debug.js  flows.css  models.css  models.js  pages.css  projects.js  tokens.css  ui-kit.css
apps/arw-server/benches/: capsule_middleware.rs
apps/arw-server/proptest-regressions/: main.txt
apps/arw-server/proto/: arw.proto
apps/arw-server/src/: access_log.rs  api_actions.rs  api_config.rs  api_connectors.rs  api_context.rs  api_egress.rs  api_egress_settings.rs  api_events.rs  api_experiments.rs  api_feedback.rs  api_goldens.rs  api_leases.rs  api_logic_units.rs  api_memory.rs  api_meta.rs  api_metrics.rs  api_models.rs  api_orchestrator.rs  api_policy.rs  api_probe.rs  api_projects.rs  api_research_watcher.rs  api_review.rs  api_spec.rs  api_state.rs  api_ui.rs  app_state.rs  autonomy.rs  bootstrap.rs  capability.rs  capsule_guard.rs  chat.rs  cluster.rs  compression.rs  config.rs  config_watcher.rs  context_capability.rs  context_cascade.rs  context_loop.rs  context_metrics.rs  (+60 more)
apps/arw-server/src/api/: actions.rs  autonomy.rs  chat.rs  compression.rs  config.rs  connectors.rs  context.rs  distill.rs  egress.rs  egress_settings.rs  events.rs  experiments.rs  feedback.rs  goldens.rs  governor.rs  hierarchy.rs  http_utils.rs  leases.rs  logic_units.rs  memory.rs  meta.rs  metrics.rs  mod.rs  models.rs  orchestrator.rs  persona.rs  planning.rs  policy.rs  probe.rs  projects.rs  research_watcher.rs  review.rs  rpu.rs  run.rs  runtime.rs  self_model.rs  spec.rs  staging.rs  state.rs  tools.rs  (+1 more)
apps/arw-server/src/autonomy/: engagement.rs
apps/arw-server/src/ext/: http.rs
apps/arw-server/src/models/: config.rs  downloads.rs  hash_guard.rs  model_metrics.rs  preflight.rs  storage.rs  types.rs
apps/arw-server/src/modular/: error.rs  mod.rs  persistence.rs  schema.rs  summary.rs  tests.rs  types.rs  validation.rs
apps/arw-server/src/test_support/: contracts.rs  mod.rs
apps/arw-server/src/tools/: error.rs  guardrails.rs  ocr_support.rs  projects.rs  screenshots.rs  screenshots_disabled.rs
apps/arw-server/src/working_set/: builder.rs  mod.rs  models.rs  spec.rs  tests.rs
apps/arw-svc/: Cargo.toml  Dockerfile  README.md  build.rs
apps/arw-svc/assets/: agents.html  debug.html  models.html  projects.html
apps/arw-svc/assets/ui/: tokens.css  (+1 more)
apps/arw-svc/proto/: arw.proto
apps/arw-svc/spec/: asyncapi.yaml  openapi.yaml
apps/arw-svc/src/: app_state.rs  dyn_timeout.rs  ext.rs  grpc.rs  lib.rs  main.rs  resources.rs  route_recorder.rs  state_bridge.rs  test_support.rs
apps/arw-svc/tests/: admin_registry.rs  admin_routes_annotated.rs  http_spec.rs  memory_spec.rs  models_spec.rs  uniformity_lints.rs
apps/snappy-bench/: Cargo.toml
apps/snappy-bench/src/: main.rs
crates/arw-contracts/: Cargo.toml
crates/arw-contracts/src/: affect.rs  economy.rs  lib.rs  memory.rs  persona.rs  pointer.rs  policy.rs  worldview.rs
crates/arw-core/: Cargo.toml
crates/arw-core/benches/: ingest.rs
crates/arw-core/src/: arrow_ingest.rs  cache_policy.rs  capsule_presets.rs  capsule_trust.rs  config.rs  gating.rs  gating_keys.rs  hierarchy.rs  lib.rs  orchestrator.rs  orchestrator_nats.rs  perf.rs  recipes.rs  rpu.rs  runtime_bundles.rs  test_support.rs  util.rs  wasm.rs
crates/arw-core/tests/: local_queue_flow.rs  nats_queue_flow.rs
crates/arw-core/wit/: tool.wit
crates/arw-events/: Cargo.toml
crates/arw-events/src/: lib.rs  test_support.rs
crates/arw-kernel/: Cargo.toml
crates/arw-kernel/src/: lib.rs
crates/arw-memory-core/: Cargo.toml
crates/arw-memory-core/src/: lib.rs
crates/arw-mock-adapter/: Cargo.toml
crates/arw-mock-adapter/src/: lib.rs
crates/arw-otel/: Cargo.toml
crates/arw-otel/src/: lib.rs
crates/arw-runtime-adapter/: Cargo.toml
crates/arw-runtime-adapter/src/: lib.rs  manifest.rs
crates/arw-tauri/: Cargo.toml  README.md
crates/arw-tauri/src/: lib.rs
crates/arw-wasi/: Cargo.toml
crates/arw-wasi/src/: lib.rs
crates/compress/: Cargo.toml
crates/compress/src/: lib.rs  llmlingua.rs  llmlingua_driver.py  noop.rs
(+1263 files in other folders)
