[workspace]
members = [
  "crates/arw-protocol",
  "crates/arw-events",
  "crates/arw-core",
  "crates/arw-macros",
  "apps/arw-cli",
  "crates/arw-otel",
  "apps/arw-svc",
  "apps/arw-tray"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread","macros","sync","signal","fs"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
inventory = "0.3"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 0
incremental = false
