[workspace]
members = [
  "crates/arw-protocol",
  "crates/arw-events",
  "crates/arw-core",
  "crates/arw-macros",
  "apps/arw-cli",
  "crates/arw-otel",
  "apps/arw-svc",
  "apps/arw-connector",
  "apps/arw-tray"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
regex = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread","macros","sync","signal","fs"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
inventory = "0.3"
once_cell = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
schemars = { version = "0.8", features = ["derive"] }
jsonschema = "0.17"
utoipa = { version = "5", features = ["axum_extras","yaml"] }
arrow2 = { version = "0.18", features = ["io_json"] }
reqwest = { version = "0.12", features = ["json","stream"] }
futures-util = "0.3"
fs2 = "0.4"

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 0
incremental = false

[workspace.metadata.dist]
# Configuration for cargo-dist distribution tooling
cargo-dist-version = "0.30.0"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc"
]
installers = ["shell", "powershell", "msi", "pkg"]
