[package]
name = "arw-cli"
version = "0.1.4"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
arw-core = { path = "../../crates/arw-core", version = "0.1.4" }
serde_json = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
rand = "0.9"
rand_core = "0.9"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
