[package]
name = "arw-cli"
version = "0.2.0-dev"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
arw-core = { path = "../../crates/arw-core", version = "0.2.0-dev" }
arw-runtime = { path = "../../crates/arw-runtime", version = "0.2.0-dev" }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
rand = "0.9"
rand_core = "0.9"
json-patch = "3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
walkdir = "2"
chrono = { workspace = true }
sha2 = "0.10"
tempfile = "3"
csv = "1"
toml = "0.8"
