[package]
name = "arw-connector"
version = "0.2.0-dev"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread","macros","signal","sync"] }
arw-core = { path = "../../crates/arw-core", version = "0.2.0-dev", features = ["nats"] }
arw-otel = { path = "../../crates/arw-otel", version = "0.2.0-dev" }
chrono = { workspace = true }

[dependencies.async-nats]
version = "0.44.2"
optional = true
default-features = false
features = ["ring"]

[features]
default = []
nats = ["arw-core/nats", "dep:async-nats"]
