[package]
name = "arw-mini-dashboard"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
json-patch = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
arw-otel = { path = "../../crates/arw-otel", version = "0.2.0-dev" }
