[package]
name = "arw-contracts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared policy and memory contracts for ARW server modules"
repository = "https://github.com/t3hw00t/ARW"

[dependencies]
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.7", features = ["macros"] }
serde_json = "1.0"
thiserror = "1.0"
