[package]
name = "arw-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
arw-protocol = { path = "../arw-protocol" }
arw-events = { path = "../arw-events" }
toml = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
base64 = "0.22"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }


inventory = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
once_cell = { workspace = true }

# Optional runtime for loading WASM plug‑ins
wasmtime = { version = "36.0.2", optional = true, features = ["component-model"] }
wit-bindgen = { version = "0.45.1", optional = true }

[features]
default = []
wasm = ["wasmtime", "wit-bindgen"]
arrow-bench = []
nats = ["dep:async-nats"]

[dev-dependencies.arrow2]
workspace = true

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "ingest"
harness = false
required-features = ["arrow-bench"]

[dependencies.async-nats]
version = "0.42"
optional = true
default-features = false
features = ["ring"]
