[package]
name = "arw-core"
version = "0.1.4"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
arw-protocol = { path = "../arw-protocol", version = "0.1.4" }
arw-events = { path = "../arw-events", version = "0.1.4" }
toml = { workspace = true }
serde_yaml = "0.9"
async-trait = "0.1"
tokio = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }


inventory = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
once_cell = { workspace = true }
directories = "5"
sysinfo = { workspace = true }

# Optional runtime for loading WASM plug‑ins
wasmtime = { version = "37.0.1", optional = true, features = ["component-model"] }
wit-bindgen = { version = "0.46.0", optional = true }

[features]
default = []
wasm = ["wasmtime", "wit-bindgen"]
arrow-bench = ["dep:arrow"]
nats = ["dep:async-nats"]

[dependencies.arrow]
workspace = true
optional = true

[dev-dependencies]
criterion = "0.7"
serial_test = "3"

[[bench]]
name = "ingest"
harness = false
required-features = ["arrow-bench"]

[dependencies.async-nats]
version = "0.44.1"
optional = true
default-features = false
features = ["ring"]
