[package]
name = "arw-events"
version = "0.1.1"
edition = "2021"
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
chrono = { workspace = true }
futures-util = { workspace = true }
arw-protocol = { path = "../arw-protocol", version = "0.1.1" }

[features]
default = []
nats = ["dep:async-nats"]

[dependencies.async-nats]
version = "0.42"
optional = true
default-features = false
features = ["ring"]
