[package]
name = "arw-events"
version = "0.2.0-dev"
edition = "2021"
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
chrono = { workspace = true }
futures-util = { workspace = true }
arw-protocol = { path = "../arw-protocol", version = "0.2.0-dev" }

[features]
default = []
nats = ["dep:async-nats"]

[dependencies.async-nats]
version = "0.44.1"
optional = true
default-features = false
features = ["ring"]
