[package]
name = "arw-kernel"
version = "0.1.4"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled","chrono","functions"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs","macros","rt-multi-thread","sync"] }
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
arw-events = { path = "../arw-events", version = "0.1.4" }
uuid = { version = "1", features = ["v4"] }
