[package]
name = "arw-kernel"
version = "0.2.0-dev"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled","chrono","functions"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs","macros","rt-multi-thread","sync"] }
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
arw-events = { path = "../arw-events", version = "0.2.0-dev" }
arw-memory-core = { path = "../arw-memory-core", version = "0.2.0-dev" }
uuid = { version = "1", features = ["v4"] }
metrics = { version = "0.24", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
metrics = ["dep:metrics"]
