[package]
name = "arw-memory-core"
version = "0.1.4"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled","chrono","functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
