[package]
name = "arw-mock-adapter"
version = "0.2.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mock runtime adapter and tiny health server for adapter smoke tests"

[lib]
name = "arw_mock_adapter"
path = "src/lib.rs"

[[bin]]
name = "mock-adapter-health"
path = "src/bin/mock_adapter_health.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
arw-runtime = { path = "../arw-runtime" }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread","macros","sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

