[package]
name = "arw-otel"
version = "0.1.4"
edition = "2021"
license.workspace = true

[features]
default = []
otlp = ["dep:opentelemetry","dep:opentelemetry-otlp","dep:tracing-opentelemetry"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = { workspace = true }

[dependencies.opentelemetry]
version = "0.30"
optional = true
features = ["trace"]

[dependencies.opentelemetry-otlp]
version = "0.30"
optional = true
features = ["trace"]

[dependencies.tracing-opentelemetry]
version = "0.31"
optional = true
