[package]
name = "arw-otel"
version = "0.1.4"
edition = "2021"
license.workspace = true

[features]
default = []
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
    "dep:metrics-exporter-opentelemetry",
]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = { workspace = true }

[dependencies.opentelemetry]
version = "0.31"
optional = true
default-features = false
features = ["trace"]

[dependencies.opentelemetry_sdk]
version = "0.31"
optional = true
features = ["trace", "rt-tokio", "metrics"]

[dependencies.opentelemetry-otlp]
version = "0.31"
optional = true
default-features = false
features = ["trace", "grpc-tonic", "metrics"]

[dependencies.tracing-opentelemetry]
version = "0.32"
optional = true

[dependencies.metrics-exporter-opentelemetry]
version = "0.1.2"
optional = true
default-features = false
