[package]
name = "arw-runtime-adapter"
version = "0.2.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Adapter SDK utilities for integrating external runtimes with ARW RuntimeSupervisor"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
arw-runtime = { path = "../arw-runtime" }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
